# abot

./: .env  .gitignore  Cargo.toml  build.rs  install.sh  readme.md
src/: chatbot.rs  config.rs  llama.rs  llama_function.rs  main.rs  markdown.rs  web_search.rs
src/gbnf/: node_extract.gbnf
