[package]
name = "abot"
version = "0.1.0"
edition = "2021"
description = "Another CLI chatbot, written in Rust and very fast, support markdown output"
authors = ["Michael Dee"]


[dependencies]
anyhow = "1.0"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
rustyline = "12.0"
serde_json = "1.0"
termimad = "0.20"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"
toml = "0.8"

[[bin]]
name = "abot"
path = "src/main.rs"